# Q_objTest

./: CMakeLists.txt  caller.ui  callerMainWindow.h  main.cpp
